[package]
name = "traefik-jwt-auth-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["headers", "macros"] }
axum-auth = "0.4"
jsonwebtoken = "8.2"
once_cell = "1.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
uuid = { version = "1.2", features = ["serde"] }
